--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,7 @@
-MONGO_URL = "mongodb+srv://ChrisDiPaula:jarvis@cluster0.rsd6f.mongodb.net/CRUD?retryWrites=true&w=majority"
+PORT = 5000
+
+DATABASE = "mongodb+srv://ChrisDiPaula:jarvis@cluster0.rsd6f.mongodb.net/DataBlog?retryWrites=true&w=majority"
+
+PASS_SEC = s1s1
+
+JWT_SEC = s1s1
